--- a/frontend_assignment/package.json
+++ b/frontend_assignment/package.json
@@ -23,7 +23,9 @@
         "assert": "^2.0.0",
         "next": "12.0.10",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.31.2",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@appliedzkp/semaphore-contracts": "^0.8.0",
